--- a/src/app/styles/scvo.scss
+++ b/src/app/styles/scvo.scss
@@ -1,8 +1,10 @@
 @charset "utf-8";
 
+
 // Base variables ==============================================================
 
 $base-font-family: "Open Sans", "Helvetica", sans-serif;
+
 
 // Fonts =======================================================================
 
@@ -183,6 +185,7 @@ main {
     }
 }
 
+
 // Navbar ======================================================================
 
 header {
@@ -223,6 +226,8 @@ footer a {
     color: rgba(255, 255, 255, 0.84);
 }
 
+
+// Misc. =======================================================================
 
 // a, :focus {
 //     outline: 0;
