Various minor formatting changes

--- a/src/app/styles/scvo.scss
+++ b/src/app/styles/scvo.scss
@@ -211,6 +211,18 @@ header {
         padding-left: 3px;
     }
 }
+// temporary fix for Materialize bug with Mac Chrome -
+// https://github.com/Dogfalo/materialize/issues/3161
+.nav-wrapper, .nav-wrapper form, .nav-wrapper form .input-field{ height: 100%; }
+
+
+// Content =====================================================================
+
+home {
+    h4 {
+        margin-top: 0;
+    }
+}
 
 
 // Footer ======================================================================
