--- a/src/app/components/shared/header/header.html
+++ b/src/app/components/shared/header/header.html
@@ -32,24 +32,22 @@
             <div class="row">
                 <div class="col s12 navbar-nav">
                     <ul>
-                        <li><a [routerLink]="['/']" class="waves-effect waves-light">Home</a></li>
-                        <li><a [routerLink]="['/help']" class="waves-effect waves-light">Running a charity</a></li>
-                        <li><a [routerLink]="['/jobs']" class="waves-effect waves-light">Third sector jobs</a></li>
-                        <li><a [routerLink]="['/policy']" class="waves-effect waves-light">Policy &amp; news</a></li>
+                        <li><a [routerLink]="['/']" class="waves-effect waves-dark">Home</a></li>
+                        <li><a [routerLink]="['/help']" class="waves-effect waves-dark">Running a charity</a></li>
+                        <li><a [routerLink]="['/jobs']" class="waves-effect waves-dark">Third sector jobs</a></li>
+                        <li><a [routerLink]="['/policy']" class="waves-effect waves-dark">Policy &amp; news</a></li>
                         <li><a class="dropdown-toggle" data-activates="dropdown-events">Events &amp; campaigns <i class="material-icons right">arrow_drop_down</i></a></li>
-                        <li><a [routerLink]="['/support']" class="waves-effect waves-light">Support</a></li>
-                        <li><a [routerLink]="['/about']" class="waves-effect waves-light">About</a></li>
+                        <li><a [routerLink]="['/support']" class="waves-effect waves-dark">Support</a></li>
+                        <li><a [routerLink]="['/about']" class="waves-effect waves-dark">About</a></li>
                     </ul>
                     <ul class="side-nav" id="mobile-nav">
-                        <li><a [routerLink]="['/']">Home</a></li>
-                        <li><a [routerLink]="['/about']">About</a></li>
-                        <li><a [routerLink]="['/github']">Github Repos</a></li>
-                        <li><a [routerLink]="['/search']">Search</a></li>
-                        <li><a href="/help">Running a charity</a></li>
-                        <li><a href="/jobs">Third sector jobs</a></li>
-                        <li><a href="/policy">Policy &amp; news</a></li>
-                        <li><a href="/support">Support</a></li>
-                        <li><a href="/about">About us</a></li>
+                      <li><a [routerLink]="['/']" class="waves-effect waves-dark">Home</a></li>
+                      <li><a [routerLink]="['/help']" class="waves-effect waves-dark">Running a charity</a></li>
+                      <li><a [routerLink]="['/jobs']" class="waves-effect waves-dark">Third sector jobs</a></li>
+                      <li><a [routerLink]="['/policy']" class="waves-effect waves-dark">Policy &amp; news</a></li>
+                      <li><a [routerLink]="['/events']" class="waves-effect waves-dark">Events &amp; campaigns</a></li>
+                      <li><a [routerLink]="['/support']" class="waves-effect waves-dark">Support</a></li>
+                      <li><a [routerLink]="['/about']" class="waves-effect waves-dark">About</a></li>
                     </ul>
                 </div>
             </div>
