Initial prototype ES connector

--- a/src/app/styles/scvo.scss
+++ b/src/app/styles/scvo.scss
@@ -203,8 +203,13 @@ header {
 .navbar {
     .navbar-search {
         padding-right: 0;
-        input {
+        .input-field input[type=search] {
             margin-bottom: 0;
+            background-color: rgba(255, 255, 255, 0.1);
+        }
+        .input-field input[type=search]:focus {
+            color: #000;
+            background-color: rgba(255, 255, 255, 0.9);
         }
     }
     .brand-logo {
