--- a/src/app/styles/scvo.scss
+++ b/src/app/styles/scvo.scss
@@ -207,6 +207,10 @@ header {
             margin-bottom: 0;
             background-color: rgba(255, 255, 255, 0.1);
         }
+        .input-field input[type=search]:hover {
+            background-color: rgba(255, 255, 255, 0.2);
+        }
+        // .input-field input[type=search].ng-dirty,
         .input-field input[type=search]:focus {
             color: #000;
             background-color: rgba(255, 255, 255, 0.9);
