--- a/src/app/components/shared/header/header.component.scss
+++ b/src/app/components/shared/header/header.component.scss
@@ -50,7 +50,7 @@ ul.sb-results-dropdown-menu > li:last-child {
     border-radius: 0;
 }
 .sb-seachresults.hidden{
-    visibility: 0;
+    visibility: hidden;
 }
 
 .sb-message{
