--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <h3 class="col s12 light center header"><acronym title="Scottish Council for Voluntary Organisations">SCVO</acronym> is the membership organisation for Scotland's charities, voluntary organisations and social enterprises.</h3>
+    <h3 class="col s12 light center"><acronym title="Scottish Council for Voluntary Organisations">SCVO</acronym> is the membership organisation for Scotland's charities, voluntary organisations and social enterprises.</h3>
 </div>
 
 <div class="row">
