--- a/src/app/components/elastic/search.component.html
+++ b/src/app/components/elastic/search.component.html
@@ -66,4 +66,7 @@
             </div> -->
         </li>
     </ul>
+    <div *ngIf="!resultsFound">
+        <p>No results found</p>
+    </div>
 </section>
