--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,25 +5,25 @@
 <div class="row">
     <div class="col s12 m4">
         <div class="center promo">
-            <i class="large material-icons teal-text lighten-2">group</i>
-            <h4 class="promo-caption teal-text darken-1">Partnership</h4>
-            <p class="light center">SCVO works in partnership with the voluntary sector to advance our shared values and interests. We have over 1500 members who range from individuals and grassroots groups, to Scotland-wide organisations and intermediary bodies. Through lobbying and campaigning SCVO works to advance the interests of our members and the people and communities that they support. <a href="#" class="teal-text lighten-2">Find out more</a>.</p>
+            <i class="large material-icons teal-text">group</i>
+            <h4 class="promo-caption teal-text">Partnership</h4>
+            <p class="light center">SCVO works in partnership with the voluntary sector to advance our shared values and interests. Through lobbying and campaigning SCVO works to advance the interests of our members and the people and communities that they support. <a href="#" class="teal-text">Find out more</a>.</p>
         </div>
     </div>
 
     <div class="col s12 m4">
         <div class="center promo">
-            <i class="large material-icons teal-text lighten-2">favorite</i>
-            <h4 class="promo-caption teal-text darken-1">Services</h4>
-            <p class="light center">Our services help charities and third sector organisations across Scotland focus on what they do best, whether that's supporting the most vulnerable people in our communities or conducting cutting edge research. From providing a payroll service to third sector organisations to creating thousands of jobs for young people in charities across Scotland, SCVO's services make a real difference. <a href="#" class="teal-text lighten-2">Find out more</a>.</p>
+            <i class="large material-icons teal-text">favorite</i>
+            <h4 class="promo-caption teal-text">Services</h4>
+            <p class="light center">Our services help charities and third sector organisations across Scotland. From providing a payroll service to third sector organisations to creating thousands of jobs for young people across Scotland, SCVO's services make a real difference. <a href="#" class="teal-text">Find out more</a>.</p>
         </div>
     </div>
 
     <div class="col s12 m4">
         <div class="center promo">
-            <i class="large material-icons teal-text lighten-2">thumb_up</i>
-            <h4 class="promo-caption teal-text darken-1">Employability</h4>
-            <p class="light center">At a time when unemployment is at its highest level in decades, SCVO is committed to providing jobs through employment initiatives and supporting the sector to provide work experience placements &amp; internship opportunities which help build skills. <a href="#" class="teal-text lighten-2">Find out more</a>.</p>
+            <i class="large material-icons teal-text">thumb_up</i>
+            <h4 class="promo-caption teal-text">Employability</h4>
+            <p class="light center">At a time when unemployment is at its highest level in decades, SCVO is committed to providing jobs through employment initiatives and supporting the sector to provide work experience placements &amp; internship opportunities which help build skills. <a href="#" class="teal-text">Find out more</a>.</p>
         </div>
     </div>
 </div>
