--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -13,41 +13,44 @@
                     <ul>
                         <li><a class="grey-text text-lighten-3" href="mailto:enquiries@scvo.org.uk">enquiries@scvo.org.uk</a></li>
                         <li><a class="grey-text text-lighten-3" href="tel:+441314748000">0131 474 8000</a></li>
-                        <li><a class="grey-text text-lighten-3" href="https://twitter.com/scvotweet">@scvotweet</a></li>
+                        <li><a class="grey-text text-lighten-3" href="https://twitter.com/scvotweet">Twitter</a></li>
                         <li><a class="grey-text text-lighten-3" href="https://www.facebook.com/SCVO1939">Facebook</a></li>
                     </ul>
                 </div>
                 <div class="col l3">
-                    <h5>Useful information</h5>
+                    <h5>Information</h5>
                     <ul>
-                        <li><a class="grey-text text-lighten-3" href="/">Terms &amp; conditions</a></li>
-                        <li><a class="grey-text text-lighten-3" href="/">Privacy &amp; cookies</a></li>
-                        <li><a class="grey-text text-lighten-3" href="/">House rules</a></li>
-                        <li><a class="grey-text text-lighten-3" href="/">Accessibility</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#">Terms &amp; conditions</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#">Privacy policy</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#">Cookie policy</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#">Accessibility</a></li>
                     </ul>
                 </div>
                 <div class="col l3">
-                    <h5>Our activities</h5>
+                    <h5>Services</h5>
                     <ul>
-                        <li><a class="grey-text text-lighten-3" href="/">Community Jobs Scotland</a></li>
-                        <li><a class="grey-text text-lighten-3" href="/">Creative Internships</a></li>
-                        <li><a class="grey-text text-lighten-3" href="/">Digital Participation</a></li>
-                        <li><a class="grey-text text-lighten-3" href="/">The Gathering</a></li>
-                        <li><a class="grey-text text-lighten-3" href="/">Goodmoves</a></li>
+                        <li><a class="grey-text text-lighten-3" href="http://goodhq.org">GoodHQ</a></li>
+                        <li><a class="grey-text text-lighten-3" href="http://www.fundingscotland.com">Funding Scotland</a></li>
+                        <li><a class="grey-text text-lighten-3" href="http://goodmoves.org.uk">Goodmoves</a></li>
+                        <li><a class="grey-text text-lighten-3" href="http://digital.scvo.org.uk">Digital Participation</a></li>
                     </ul>
                 </div>
                 <div class="col l3">
                     <h5>Related</h5>
                     <ul>
-                        <li><a class="grey-text text-lighten-3" href="/">Scottish Accessible Information Forum</a></li>
-                        <li><a class="grey-text text-lighten-3" href="/">Scotland: National Rural Network</a></li>
-                        <li><a class="grey-text text-lighten-3" href="/">Third Force News</a></li>
-                        <li><a class="grey-text text-lighten-3" href="/">Third Sector Internships Scotland</a></li>
+                        <li><a class="grey-text text-lighten-3" href="http://thirdforcenews.org.uk">Third Force News</a></li>
+                        <li><a class="grey-text text-lighten-3" href="http://www.3rdsectorintern.com">Third Sector Internships Scotland</a></li>
+                        <li><a class="grey-text text-lighten-3" href="http://www.saifscotland.org.uk">Scottish Accessible Information Forum</a></li>
+                        <li><a class="grey-text text-lighten-3" href="http://charter.scvo.org.uk">Scotland's Digital Participation Charter</a></li>
                     </ul>
                 </div>
             </div>
             <div class="footer-copyright">
-                <p><small>&copy; {{ date | date:'yyyy' }}. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation. Registration number SC003558.</small></p>
+                <div class="row">
+                    <div class="col s12">
+                        <p><small>&copy; {{ date | date:'yyyy' }}. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation. Registration number SC003558.</small></p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
