--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -56,7 +56,8 @@
                             <li><a [routerLink]="['/help']" class="waves-effect waves-dark">Running a charity</a></li>
                             <li><a [routerLink]="['/jobs']" class="waves-effect waves-dark">Third sector jobs</a></li>
                             <li><a [routerLink]="['/policy']" class="waves-effect waves-dark">Policy &amp; news</a></li>
-                            <li><a class="dropdown-toggle" data-activates="dropdown-events">Events &amp; campaigns <i class="material-icons right">arrow_drop_down</i></a></li>
+                            <li><a [routerLink]="['/events']" class="waves-effect waves-dark">Events &amp; campaigns</a></li>
+                            <!-- <li><a class="dropdown-toggle" data-activates="dropdown-events">Events &amp; campaigns <i class="material-icons right">arrow_drop_down</i></a></li> -->
                             <li><a [routerLink]="['/support']" class="waves-effect waves-dark">Support</a></li>
                             <li><a [routerLink]="['/about']" class="waves-effect waves-dark">About</a></li>
                         </ul>
