--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -48,7 +48,7 @@
             <div class="footer-copyright">
                 <div class="row">
                     <div class="col s12">
-                        <p><small>&copy; {{ date | date:'yyyy' }}. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation. Registration number SC003558.</small></p>
+                        <p><small>&copy; {{ date | date:'yyyy' }}. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation. Registration number <a href="http://www.oscr.org.uk/charities/search-scottish-charity-register/charity-details?number=SC003558">SC003558</a>.</small></p>
                     </div>
                 </div>
             </div>
