--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,18 +21,18 @@ $base-font-family: "Open Sans", "Helvetica", sans-serif;
     font-style: normal;
 }
 
-// Italic Open Sans
-@font-face {
-    font-family: 'Open Sans';
-    src: url('assets/fonts/OpenSans-Italic-webfont.eot');
-    src: url('assets/fonts/OpenSans-Italic-webfont.eot?#iefix') format('embedded-opentype'),
-    url('assets/fonts/OpenSans-Italic-webfont.woff') format('woff'),
-    url('assets/fonts/OpenSans-Italic-webfont.ttf') format('truetype'),
-    url('assets/fonts/OpenSans-Italic-webfont.svg#OpenSansItalic') format('svg');
-    font-weight: normal;
-    font-weight: 400;
-    font-style: italic;
-}
+// // Italic Open Sans
+// @font-face {
+//     font-family: 'Open Sans';
+//     src: url('assets/fonts/OpenSans-Italic-webfont.eot');
+//     src: url('assets/fonts/OpenSans-Italic-webfont.eot?#iefix') format('embedded-opentype'),
+//     url('assets/fonts/OpenSans-Italic-webfont.woff') format('woff'),
+//     url('assets/fonts/OpenSans-Italic-webfont.ttf') format('truetype'),
+//     url('assets/fonts/OpenSans-Italic-webfont.svg#OpenSansItalic') format('svg');
+//     font-weight: normal;
+//     font-weight: 400;
+//     font-style: italic;
+// }
 
 // Light Open Sans
 @font-face {
@@ -46,41 +46,41 @@ $base-font-family: "Open Sans", "Helvetica", sans-serif;
     font-style: normal;
 }
 
-// Light Italic Open Sans
-@font-face {
-    font-family: 'Open Sans';
-    src: url('assets/fonts/OpenSans-LightItalic-webfont.eot');
-    src: url('assets/fonts/OpenSans-LightItalic-webfont.eot?#iefix') format('embedded-opentype'),
-    url('assets/fonts/OpenSans-LightItalic-webfont.woff') format('woff'),
-    url('assets/fonts/OpenSans-LightItalic-webfont.ttf') format('truetype'),
-    url('assets/fonts/OpenSans-LightItalic-webfont.svg#OpenSansLightItalic') format('svg');
-    font-weight: 200;
-    font-style: italic;
-}
-
-// Semibold Open Sans
-@font-face {
-    font-family: 'Open Sans';
-    src: url('assets/fonts/OpenSans-Semibold-webfont.eot');
-    src: url('assets/fonts/OpenSans-Semibold-webfont.eot?#iefix') format('embedded-opentype'),
-    url('assets/fonts/OpenSans-Semibold-webfont.woff') format('woff'),
-    url('assets/fonts/OpenSans-Semibold-webfont.ttf') format('truetype'),
-    url('assets/fonts/OpenSans-Semibold-webfont.svg#OpenSansSemibold') format('svg');
-    font-weight: 500;
-    font-style: normal;
-}
-
-// Semibold Italic Open Sans
-@font-face {
-    font-family: 'Open Sans';
-    src: url('assets/fonts/OpenSans-SemiboldItalic-webfont.eot');
-    src: url('assets/fonts/OpenSans-SemiboldItalic-webfont.eot?#iefix') format('embedded-opentype'),
-    url('assets/fonts/OpenSans-SemiboldItalic-webfont.woff') format('woff'),
-    url('assets/fonts/OpenSans-SemiboldItalic-webfont.ttf') format('truetype'),
-    url('assets/fonts/OpenSans-SemiboldItalic-webfont.svg#OpenSansSemiboldItalic') format('svg');
-    font-weight: 500;
-    font-style: italic;
-}
+// // Light Italic Open Sans
+// @font-face {
+//     font-family: 'Open Sans';
+//     src: url('assets/fonts/OpenSans-LightItalic-webfont.eot');
+//     src: url('assets/fonts/OpenSans-LightItalic-webfont.eot?#iefix') format('embedded-opentype'),
+//     url('assets/fonts/OpenSans-LightItalic-webfont.woff') format('woff'),
+//     url('assets/fonts/OpenSans-LightItalic-webfont.ttf') format('truetype'),
+//     url('assets/fonts/OpenSans-LightItalic-webfont.svg#OpenSansLightItalic') format('svg');
+//     font-weight: 200;
+//     font-style: italic;
+// }
+//
+// // Semibold Open Sans
+// @font-face {
+//     font-family: 'Open Sans';
+//     src: url('assets/fonts/OpenSans-Semibold-webfont.eot');
+//     src: url('assets/fonts/OpenSans-Semibold-webfont.eot?#iefix') format('embedded-opentype'),
+//     url('assets/fonts/OpenSans-Semibold-webfont.woff') format('woff'),
+//     url('assets/fonts/OpenSans-Semibold-webfont.ttf') format('truetype'),
+//     url('assets/fonts/OpenSans-Semibold-webfont.svg#OpenSansSemibold') format('svg');
+//     font-weight: 500;
+//     font-style: normal;
+// }
+//
+// // Semibold Italic Open Sans
+// @font-face {
+//     font-family: 'Open Sans';
+//     src: url('assets/fonts/OpenSans-SemiboldItalic-webfont.eot');
+//     src: url('assets/fonts/OpenSans-SemiboldItalic-webfont.eot?#iefix') format('embedded-opentype'),
+//     url('assets/fonts/OpenSans-SemiboldItalic-webfont.woff') format('woff'),
+//     url('assets/fonts/OpenSans-SemiboldItalic-webfont.ttf') format('truetype'),
+//     url('assets/fonts/OpenSans-SemiboldItalic-webfont.svg#OpenSansSemiboldItalic') format('svg');
+//     font-weight: 500;
+//     font-style: italic;
+// }
 
 // Bold Open Sans
 @font-face {
@@ -95,18 +95,18 @@ $base-font-family: "Open Sans", "Helvetica", sans-serif;
     font-style: normal;
 }
 
-// Bold Italic Open Sans
-@font-face {
-    font-family: 'Open Sans';
-    src: url('assets/fonts/OpenSans-BoldItalic-webfont.eot');
-    src: url('assets/fonts/OpenSans-BoldItalic-webfont.eot?#iefix') format('embedded-opentype'),
-    url('assets/fonts/OpenSans-BoldItalic-webfont.woff') format('woff'),
-    url('assets/fonts/OpenSans-BoldItalic-webfont.ttf') format('truetype'),
-    url('assets/fonts/OpenSans-BoldItalic-webfont.svg#OpenSansBoldItalic') format('svg');
-    font-weight: bold;
-    font-weight: 700;
-    font-style: italic;
-}
+// // Bold Italic Open Sans
+// @font-face {
+//     font-family: 'Open Sans';
+//     src: url('assets/fonts/OpenSans-BoldItalic-webfont.eot');
+//     src: url('assets/fonts/OpenSans-BoldItalic-webfont.eot?#iefix') format('embedded-opentype'),
+//     url('assets/fonts/OpenSans-BoldItalic-webfont.woff') format('woff'),
+//     url('assets/fonts/OpenSans-BoldItalic-webfont.ttf') format('truetype'),
+//     url('assets/fonts/OpenSans-BoldItalic-webfont.svg#OpenSansBoldItalic') format('svg');
+//     font-weight: bold;
+//     font-weight: 700;
+//     font-style: italic;
+// }
 
 // Extra Bold Open Sans
 @font-face {
@@ -120,17 +120,17 @@ $base-font-family: "Open Sans", "Helvetica", sans-serif;
     font-style: normal;
 }
 
-// Extra Bold Italic Open Sans
-@font-face {
-    font-family: 'Open Sans';
-    src: url('assets/fonts/OpenSans-ExtraBoldItalic-webfont.eot');
-    src: url('assets/fonts/OpenSans-ExtraBoldItalic-webfont.eot?#iefix') format('embedded-opentype'),
-    url('assets/fonts/OpenSans-ExtraBoldItalic-webfont.woff') format('woff'),
-    url('assets/fonts/OpenSans-ExtraBoldItalic-webfont.ttf') format('truetype'),
-    url('assets/fonts/OpenSans-ExtraBoldItalic-webfont.svg#OpenSansExtraboldItalic') format('svg');
-    font-weight: 900;
-    font-style: italic;
-}
+// // Extra Bold Italic Open Sans
+// @font-face {
+//     font-family: 'Open Sans';
+//     src: url('assets/fonts/OpenSans-ExtraBoldItalic-webfont.eot');
+//     src: url('assets/fonts/OpenSans-ExtraBoldItalic-webfont.eot?#iefix') format('embedded-opentype'),
+//     url('assets/fonts/OpenSans-ExtraBoldItalic-webfont.woff') format('woff'),
+//     url('assets/fonts/OpenSans-ExtraBoldItalic-webfont.ttf') format('truetype'),
+//     url('assets/fonts/OpenSans-ExtraBoldItalic-webfont.svg#OpenSansExtraboldItalic') format('svg');
+//     font-weight: 900;
+//     font-style: italic;
+// }
 
 
 // Layout ======================================================================
@@ -154,6 +154,9 @@ body {
     font-family: $base-font-family;
     min-height: 100%;
     background-color: #263238;
+}
+body, p, strong, li, a {
+    font-weight: 400;
 }
 header,
 main {
@@ -240,6 +243,9 @@ footer {
 footer,
 footer a {
     color: rgba(255, 255, 255, 0.84);
+}
+footer a {
+    text-decoration: underline;
 }
 
 
