--- a/src/app/components/elastic/search.component.html
+++ b/src/app/components/elastic/search.component.html
@@ -1,6 +1,6 @@
 <h3>Search</h3>
 
-<!-- <p><small>Found {{countResults}} results</small></p> -->
+<!-- <p><small>Found {{results}} results</small></p> -->
 
 <section>
     <ul>
@@ -66,7 +66,7 @@
             </div> -->
         </li>
     </ul>
-    <div *ngIf="!resultsFound">
+    <div *ngIf="!results">
         <p>No results found</p>
     </div>
 
