--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -200,7 +200,8 @@ header {
 .row .col.navbar-nav {
     padding: 0;
     a {
-        margin-top: -2px;
+        // not sure why this is needed - problem stacking two navbars
+        display: block;
     }
 }
 .navbar {
