--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -24,20 +24,20 @@
                             <input-debounce delay="500" (value)="searchChanged($event)"></input-debounce>
                         </form>
                         <!-- Hide dropdown: {{hideAutocomplete}} -->
-                        <!-- Results: {{results?.length}} -->
+                        <!-- Results: {{results?.length}} - ->
                         <div class="sb-seachresults" [ngClass]="{hidden:(results?.length === 0 || hideAutocomplete)}">
                             <ul class="sb-results-dropdown-menu">
-                                <!-- <li *ngFor="let item of items | async" (mousedown)="selectResult(item)">
+                                <!- - <li *ngFor="let item of items | async" (mousedown)="selectResult(item)">
                                     <span>{{item}}</span>
-                                </li> -->
+                                </li> - ->
                                 <li *ngFor="let result of results | async" (mousedown)="selectResult(result.title)">
                                     <span *ngIf="result.title">{{result.title | uppercase}}</span>
-                                    <!-- <span *ngIf="result.name">{{result.name | uppercase}}</span>
-                                    <span *ngIf="result.charityNumber">{{result.charityNumber | uppercase}}</span> -->
+                                    <!- - <span *ngIf="result.name">{{result.name | uppercase}}</span>
+                                    <span *ngIf="result.charityNumber">{{result.charityNumber | uppercase}}</span> - ->
                                 </li>
                             </ul>
                         </div>
-                        <!-- <div class="sb-seachresults" [ngClass]="{hidden:(results?.length > 0)}">
+                        <!- - <div class="sb-seachresults" [ngClass]="{hidden:(results?.length > 0)}">
                             <ul class="sb-results-dropdown-menu">
                                 <li *ngFor="let result of results | async" (mousedown)="resultSelected(result)">
                                     <span *ngIf="result.title">{{result.title | uppercase}}</span>
@@ -63,14 +63,14 @@
                 <div class="row">
                     <div class="col s12 navbar-nav">
                         <ul>
-                            <li><a [routerLink]="['/']" class="waves-effect waves-dark">Home</a></li>
-                            <li><a [routerLink]="['/help']" class="waves-effect waves-dark">Running a charity</a></li>
-                            <li><a [routerLink]="['/jobs']" class="waves-effect waves-dark">Third sector jobs</a></li>
-                            <li><a [routerLink]="['/policy']" class="waves-effect waves-dark">Policy &amp; news</a></li>
-                            <li><a [routerLink]="['/events']" class="waves-effect waves-dark">Events &amp; campaigns</a></li>
+                            <li><a [routerLink]="['/']" class="waves-effect waves-light">Home</a></li>
+                            <li><a [routerLink]="['/help']" class="waves-effect waves-light">Running a charity</a></li>
+                            <li><a [routerLink]="['/jobs']" class="waves-effect waves-light">Third sector jobs</a></li>
+                            <li><a [routerLink]="['/policy']" class="waves-effect waves-light">Policy &amp; news</a></li>
+                            <li><a [routerLink]="['/events']" class="waves-effect waves-light">Events &amp; campaigns</a></li>
                             <!-- <li><a class="dropdown-toggle" data-activates="dropdown-events">Events &amp; campaigns <i class="material-icons right">arrow_drop_down</i></a></li> -->
-                            <li><a [routerLink]="['/support']" class="waves-effect waves-dark">Support</a></li>
-                            <li><a [routerLink]="['/about']" class="waves-effect waves-dark">About</a></li>
+                            <li><a [routerLink]="['/support']" class="waves-effect waves-light">Support</a></li>
+                            <li><a [routerLink]="['/about']" class="waves-effect waves-light">About</a></li>
                         </ul>
                     </div>
                 </div>
