Structural changes for event searching

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<header class="teal darken-1"></header>
+<header class="{{themeColour}} darken-1"></header>
 
 <main>
     <div class="container-fluid">
