--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="navbar navbar-default" role="navigation">
-        <nav class="teal darken-1">
+        <nav class="{{themeColour}} darken-1">
             <div class="nav-wrapper">
                 <div class="row">
                     <div class="col s12 m8 navbar-brand">
@@ -9,8 +9,7 @@
                             <li><a [routerLink]="['/help']" class="waves-effect waves-dark">Running a charity</a></li>
                             <li><a [routerLink]="['/jobs']" class="waves-effect waves-dark">Third sector jobs</a></li>
                             <li><a [routerLink]="['/policy']" class="waves-effect waves-dark">Policy &amp; news</a></li>
-                            <li><a [routerLink]="['/events']" class="waves-effect waves-dark">Events &amp; campaigns</a></li>
-                            <li><a [routerLink]="['/support']" class="waves-effect waves-dark">Support</a></li>
+                            <li><a [routerLink]="['/events']" class="waves-effect waves-dark">Events</a></li>
                             <li><a [routerLink]="['/about']" class="waves-effect waves-dark">About</a></li>
                         </ul>
                         <a href="javascript:void(0);" data-activates="main-menu" class="button-collapse">
@@ -50,7 +49,7 @@
                 </div>
             </div>
         </nav>
-        <nav class="teal darken-2 hide-on-med-and-down">
+        <nav class="{{themeColour}} darken-2 hide-on-med-and-down">
             <div class="nav-wrapper">
                 <!--
                 <u l id="dropdown-events" class="dropdown-content">
@@ -67,9 +66,7 @@
                             <li><a [routerLink]="['/help']" class="waves-effect waves-light">Running a charity</a></li>
                             <li><a [routerLink]="['/jobs']" class="waves-effect waves-light">Third sector jobs</a></li>
                             <li><a [routerLink]="['/policy']" class="waves-effect waves-light">Policy &amp; news</a></li>
-                            <li><a [routerLink]="['/events']" class="waves-effect waves-light">Events &amp; campaigns</a></li>
-                            <!-- <li><a class="dropdown-toggle" data-activates="dropdown-events">Events &amp; campaigns <i class="material-icons right">arrow_drop_down</i></a></li> -->
-                            <li><a [routerLink]="['/support']" class="waves-effect waves-light">Support</a></li>
+                            <li><a [routerLink]="['/events']" class="waves-effect waves-light">Events</a></li>
                             <li><a [routerLink]="['/about']" class="waves-effect waves-light">About</a></li>
                         </ul>
                     </div>
