Fixed Sass loading issue and rearranged loads of files

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -39,6 +39,24 @@ h1, h2, h3, h4, h5, h6 {
     font-family: $base-font-family;
     font-weight: 700;
 }
+h1 {
+    font-size: 3em;
+}
+h2 {
+    font-size: 2.2em;
+}
+h3 {
+    font-size: 1.8em;
+}
+h4 {
+    font-size: 1.5em;
+}
+h5 {
+    font-size: 1.2em;
+}
+h6 {
+    font-size: 1em;
+}
 main {
     padding: 0.5rem 0;
     a:link {
@@ -60,7 +78,6 @@ main {
         margin-left: -29px;
     }
 }
-
 
 // Navbar ======================================================================
 
@@ -104,6 +121,27 @@ header {
 
 // Content =====================================================================
 
+home {
+    h4 {
+        margin-top: 0;
+    }
+
+    @media screen and (max-width: 992px) {
+        h3.center {
+            font-size: 1.7em;
+        }
+    }
+}
+
+policy {
+    h4 {
+        margin-top: 0.5em;
+    }
+
+    h4.promo-caption {
+        margin-top: 0;
+    }
+}
 
 
 // Footer ======================================================================
