--- a/src/app/components/static/jobs.component.html
+++ b/src/app/components/static/jobs.component.html
@@ -1,15 +1,15 @@
-<h3 class="light">Third sector jobs</h3>
+<h1 class="light">Third sector jobs</h1>
 
 <p>At a time when unemployment is at its highest level in decades, SCVO is committed to providing jobs through employment initiatives and supporting the sector to provide work experience placements &amp; internship opportunities which help build skills. Find out more.</p>
 
-<h5>Community Jobs Scotland</h5>
+<h2 class="light">Community Jobs Scotland</h2>
 <p>Creating jobs for unemployed young people in Scotland’s third sector.</p>
 
-<h5>Business Growth Graduate Internship Programme</h5>
+<h2 class="light">Business Growth Graduate Internship Programme</h2>
 <p>Paid Internships within Scottish third sector organisations, micro businesses and small and medium enterprises (SMEs).</p>
 
-<h5>Disability Equality Internship Programme</h5>
+<h2 class="light">Disability Equality Internship Programme</h2>
 <p>Paid internships for disabled graduates.</p>
 
-<h5>Third Sector Internships Scotland (TSIS)</h5>
+<h2 class="light">Third Sector Internships Scotland (TSIS)</h2>
 <p>Paid internships within third sector organisations for under graduate and post graduate students currently studying at Scottish universities.</p>
